\"namespace SogaRecibos.Application.Abstractions.Persistence; public interface IRepository { }\" 
