\"namespace SogaRecibos.Domain.Receipts; public class Receipt { }\" 
