\"namespace SogaRecibos.Infrastructure.Persistence; public class EfRepository { }\" 
